cabal-version:      2.4
name:               hangman
version:            1.0.0

synopsis: Hangman word guessing game

description: Vocabulary and word game Hangman / Galgenmännchen ported onto Haskell

bug-reports:        https://github.com/OMerkel/hangman

license:            MIT
license-file:       LICENSE

author: Oliver Merkel
maintainer: Merkel(dot)Oliver(at)web(dot)de

copyright: Copyright (c) 2021, Oliver Merkel, Merkel(dot)Oliver(at)web(dot)de

extra-source-files: CHANGELOG.md

executable hangman
    main-is:          hangman.hs

    build-depends:    base ^>=4.15.0.0 , random
    hs-source-dirs:   app
    default-language: Haskell2010
